Fixing logo on Firefox

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -13,7 +13,7 @@
 
 .logo {
   display: inline-block;
-  max-width: 75px;
+  width: 75px;
 }
 
 .logo .nav-logo {
@@ -43,6 +43,6 @@
   }
 
   .logo {
-    max-width: 100px;
+    width: 100px;
   }
 }
